header nav edit

--- a/coffeenie/index.html
+++ b/coffeenie/index.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
+	<meta name="viewport"
+		content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
 	<title>COFFEENIE</title>
 
 	<!-- style -->
@@ -33,8 +34,11 @@
 					</div>
 					<div class="header_logo">
 						<h1>
-							<a href="#">
+							<a href="#" class="pc_logo">
 								<img src="img/coffeenie_main_logo_3.png" alt="커피니 메인 로고1">
+							</a>
+							<a href="#" class="m_logo">
+								<img src="img/coffenie_text_logo-02.png" alt="커피니 메인 로고1">
 							</a>
 						</h1>
 					</div>
@@ -106,6 +110,58 @@
 					<span class="ir_pm">닫기 아이콘</span>
 				</a>
 			</div>
+			<div class="m_login">
+				<a href="#">로그인</a>
+				<a href="#">회원가입</a>
+			</div>
+			<div class="m_menu">
+				<ul>
+					<li>
+						<a href="#">COFFEENIE</a>
+						<ul>
+							<li><a href="#">브랜드 소개</a></li>
+							<li><a href="#">커피니 소식</a></li>
+							<li><a href="#">인재 채용</a></li>
+							<li><a href="#">제휴 문의</a></li>
+							<li><a href="#" class="last">오시는 길</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">MENU</a>
+						<ul>
+							<li><a href="#">신제품</a></li>
+							<li><a href="#">음료</a></li>
+							<li><a href="#">푸드 &amp; 디저트</a></li>
+							<li><a href="#">기타 제품</a></li>
+							<li><a href="#" class="last">영양성분 안내</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">STORE</a>
+						<ul>
+							<li><a href="#" class="last">매장 안내</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">MEMBERSHIP</a>
+						<ul>
+							<li><a href="#">커피니 멤버쉽</a></li>
+							<li><a href="#">포인트</a></li>
+							<li><a href="#" class="last">고객의 소리</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">FRANCHISE</a>
+						<ul>
+							<li><a href="#">가맹 개설 안내</a></li>
+							<li><a href="#">인테리어</a></li>
+							<li><a href="#">투자비용 및 프랜차이즈론</a></li>
+							<li><a href="#">FAQ</a></li>
+							<li><a href="#" class="last">가맹상담신청</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</nav>
 	<section id="banner">
@@ -134,14 +190,11 @@
 				</div>
 -->
 		<div class="slides">
-			<div>
-				<a href="#"><img src="img/strawberry_banner.jpg" alt="딸기 슬라이드배너"></a>
+			<div class="s1">
 			</div>
-			<div>
-				<a href="#"><img src="img/coffeenie_sweet_pumpkin_banner.jpg" alt="단호박 음료 배너"></a>
+			<div class="s2">
 			</div>
-			<div>
-				<a href="#"><img src="img/b_big.jpg" alt="비비빅 음료 배너"></a>
+			<div class="s3">
 			</div>
 		</div>
 	</section>
@@ -152,15 +205,23 @@
 				<div class="main_center">
 					<h3 class="main_tit">NEW MENU</h3>
 					<div class="new_slide">
-						<div><a href="#"><img src="img/new_milky_oolong_latte.gif" alt="밀키우롱라떼"><span>밀키우롱라떼</span></a></div>
-						<div><a href="#"><img src="img/new_milky_oolong_flaffe.gif" alt="밀키우롱프라페"><span>밀키우롱프라페</span></a></div>
-						<div><a href="#"><img src="img/new_milky_oolong_dolce_latte.jpg" alt="밀키우롱돌체라떼"><span>밀키우롱돌체라떼</span></a></div>
-						<div><a href="#"><img src="img/new_coldbrew_dolce_latte.gif" alt="콭드브루돌체라떼"><span>콜드브루돌체라떼</span></a></div>
+						<div><a href="#"><img src="img/new_milky_oolong_latte.gif" alt="밀키우롱라떼"><span>밀키우롱라떼</span></a>
+						</div>
+						<div><a href="#"><img src="img/new_milky_oolong_flaffe.gif"
+									alt="밀키우롱프라페"><span>밀키우롱프라페</span></a></div>
+						<div><a href="#"><img src="img/new_milky_oolong_dolce_latte.jpg"
+									alt="밀키우롱돌체라떼"><span>밀키우롱돌체라떼</span></a></div>
+						<div><a href="#"><img src="img/new_coldbrew_dolce_latte.gif"
+									alt="콭드브루돌체라떼"><span>콜드브루돌체라떼</span></a></div>
 						<div><a href="#"><img src="img/new_double_dolce_latte.gif" alt=""><span>더블돌체라떼</span></a></div>
-						<div><a href="#"><img src="img/new_real_strawberry_fraffe.gif" alt="리얼딸기프라페"><span>리얼딸기프라페</span></a></div>
-						<div><a href="#"><img src="img/new_real_strawberry_parfait.gif" alt="리얼딸기파르페"><span>리얼딸기파르페</span></a></div>
-						<div><a href="#"><img src="img/new_real_strawberry_latte.gif" alt="리얼딸기라떼"><span>리얼딸기라떼</span></a></div>
-						<div><a href="#"><img src="img/new_strawberry_chocolate_latte.gif" alt="딸기초코라떼"><span>딸기초코라떼</span></a></div>
+						<div><a href="#"><img src="img/new_real_strawberry_fraffe.gif"
+									alt="리얼딸기프라페"><span>리얼딸기프라페</span></a></div>
+						<div><a href="#"><img src="img/new_real_strawberry_parfait.gif"
+									alt="리얼딸기파르페"><span>리얼딸기파르페</span></a></div>
+						<div><a href="#"><img src="img/new_real_strawberry_latte.gif"
+									alt="리얼딸기라떼"><span>리얼딸기라떼</span></a></div>
+						<div><a href="#"><img src="img/new_strawberry_chocolate_latte.gif"
+									alt="딸기초코라떼"><span>딸기초코라떼</span></a></div>
 					</div>
 				</div>
 				<div class="main_left main_box">
@@ -182,7 +243,8 @@
 				<div class="md_slide">
 					<div><a href="#"><img src="img/md_kenya.gif" alt="케냐콜드브루"><span>케냐 AA 콜드브루</span></a></div>
 					<div><a href="#"><img src="img/md_brazil.gif" alt="브라질원두"><span>드립백[브라질 X 에티오피아]</span></a></div>
-					<div><a href="#"><img src="img/md_colombia.gif" alt="콜롬비아원두"><span>드립백[콜롬비아 X 코스타리카]</span></a></div>
+					<div><a href="#"><img src="img/md_colombia.gif" alt="콜롬비아원두"><span>드립백[콜롬비아 X 코스타리카]</span></a>
+					</div>
 					<div><a href="#"><img src="img/md_greentea.gif" alt="그린티"><span>그린티</span></a></div>
 					<div><a href="#"><img src="img/md_english.gif" alt="잉글리쉬티"><span>잉글리쉬브랙퍼스트티</span></a></div>
 					<div><a href="#"><img src="img/md_buck.gif" alt="메밀차"><span>메밀차</span></a></div>
