new menu slide edit

--- a/coffeenie/index.html
+++ b/coffeenie/index.html
@@ -163,6 +163,7 @@
 				</ul>
 			</div>
 		</div>
+		<div class="m_back"></div>
 	</nav>
 	<section id="banner">
 		<h2 class="ir_pm">배너</h2>
@@ -209,10 +210,8 @@
 						</div>
 						<div><a href="#"><img src="img/new_milky_oolong_flaffe.gif"
 									alt="밀키우롱프라페"><span>밀키우롱프라페</span></a></div>
-						<div><a href="#"><img src="img/new_milky_oolong_dolce_latte.jpg"
-									alt="밀키우롱돌체라떼"><span>밀키우롱돌체라떼</span></a></div>
 						<div><a href="#"><img src="img/new_coldbrew_dolce_latte.gif"
-									alt="콭드브루돌체라떼"><span>콜드브루돌체라떼</span></a></div>
+									alt="콜드브루돌체라떼"><span>콜드브루돌체라떼</span></a></div>
 						<div><a href="#"><img src="img/new_double_dolce_latte.gif" alt=""><span>더블돌체라떼</span></a></div>
 						<div><a href="#"><img src="img/new_real_strawberry_fraffe.gif"
 									alt="리얼딸기프라페"><span>리얼딸기프라페</span></a></div>
