--- a/coffeenie/index.html
+++ b/coffeenie/index.html
@@ -223,7 +223,7 @@
 									alt="딸기초코라떼"><span>딸기초코라떼</span></a></div>
 					</div>
 				</div>
-				<div class="main_left main_box">
+				<!-- <div class="main_left main_box">
 					<img src="img/min_banner_1_text_none.jpg" alt="프랜차이즈 배너">
 					<em class="title">FRANCHISE</em>
 					<span class="text">커피:니가 당신의 내일을 응원합니다</span>
@@ -235,7 +235,7 @@
 						<input type="text" class="s_text" placeholder="주변 매장 찾기">
 						<input type="submit" class="s_icon">
 					</div>
-				</div>
+				</div> -->
 			</div>
 			<div class="md">
 				<h3 class="main_tit md_tit">MD Check!</h3>
