--- a/coffeenie/index.html
+++ b/coffeenie/index.html
@@ -203,7 +203,7 @@
 		<h2 class="ir_pm">메인</h2>
 		<div class="container">
 			<div class="main">
-				<div class="main_center">
+				<div class="main_slide">
 					<h3 class="main_tit">NEW MENU</h3>
 					<div class="new_slide">
 						<div><a href="#"><img src="img/new_milky_oolong_latte.gif" alt="밀키우롱라떼"><span>밀키우롱라떼</span></a>
@@ -223,19 +223,20 @@
 									alt="딸기초코라떼"><span>딸기초코라떼</span></a></div>
 					</div>
 				</div>
-				<!-- <div class="main_left main_box">
-					<img src="img/min_banner_1_text_none.jpg" alt="프랜차이즈 배너">
-					<em class="title">FRANCHISE</em>
-					<span class="text">커피:니가 당신의 내일을 응원합니다</span>
-					<a href="#" class="left_btn">바로가기</a>
-				</div>
-				<div class="main_right main_box">
-					<img src="img/min_banner_2.jpg" alt="매장 검색 배너">
-					<div class="search_box">
-						<input type="text" class="s_text" placeholder="주변 매장 찾기">
-						<input type="submit" class="s_icon">
+				<div class="coffeenie_info">
+					<div class="info_text">
+						<h2>편안함 속 특별한 경험이 시작되는 곳</h2>
+						<h1 class="info_logo"><img src="/img/coffenie_text_logo_white-02.png" alt="커피니 카페 텍스트 로고"></h1>
+						<p>
+							당신에게는 언제든지 찾아가서 쉴 수 있는
+							"THIRD PLACE"가 있으신가요?
+							<br><br>
+							커피:니는 바쁜 일상 속에 지친 고객들에서 쉬고, 대화를 나누고,
+							새로운 일들을 할 수 있는 편안하고 좋은 맛과 공간을 제공하는
+							커피 프랜차이즈 브랜드입니다.
+						</p>
 					</div>
-				</div> -->
+				</div>
 			</div>
 			<div class="md">
 				<h3 class="main_tit md_tit">MD Check!</h3>
