--- a/coffeenie/index.html
+++ b/coffeenie/index.html
@@ -235,6 +235,11 @@
 							새로운 일들을 할 수 있는 편안하고 좋은 맛과 공간을 제공하는
 							커피 프랜차이즈 브랜드입니다.
 						</p>
+						<div class="info_button">
+							<button class="franchise_btn">가맹문의</button>
+							<button class="brand_btn">브랜드 소개</button>
+							<button class="newshop_btn">신규매장 소개</button>
+						</div>
 					</div>
 				</div>
 			</div>
