--- a/coffeenie/index.html
+++ b/coffeenie/index.html
@@ -277,49 +277,53 @@
 	<section id="insta">
 		<div class="insta">
 			<div class="container">
-				<div class="ins_img">
-					<h2 class="ins_tit">#커피니 #커피니카페 #coffeenie</h2>
-					<ul>
-						<li><a href="#"><img src="img/coffeenie_insta_1.jpg" alt="인스타이미지1"></a></li>
-						<li><a href="#"><img src="img/coffeenie_insta_2.jpg" alt="인스타이미지2"></a></li>
-						<li><a href="#"><img src="img/coffeenie_insta_3.jpg" alt="인스타이미지3"></a></li>
-						<li><a href="#"><img src="img/coffeenie_insta_4.jpg" alt="인스타이미지4"></a></li>
-						<li><a href="#"><img src="img/coffeenie_insta_5.jpg" alt="인스타이미지5"></a></li>
-						<li><a href="#"><img src="img/coffeenie_insta_6.jpg" alt="인스타이미지6"></a></li>
-						<li><a href="#"><img src="img/coffeenie_insta_7.jpg" alt="인스타이미지7"></a></li>
-						<li><a href="#"><img src="img/coffeenie_insta_8.jpg" alt="인스타이미지8"></a></li>
-						<li><a href="#"><img src="img/coffeenie_insta_9.jpg" alt="인스타이미지9"></a></li>
-						<li><a href="#"><img src="img/coffeenie_insta_10.jpg" alt="인스타이미지10"></a></li>
-					</ul>
-					<a href="#" class="ins_btn">커피니 인스타그램 @coffeenie_cafe</a>
+				<div class="row">
+					<div class="ins_img">
+						<h2 class="ins_tit">#커피니 #커피니카페 #coffeenie</h2>
+						<ul>
+							<li><a href="#"><img src="img/coffeenie_insta_1.jpg" alt="인스타이미지1"></a></li>
+							<li><a href="#"><img src="img/coffeenie_insta_2.jpg" alt="인스타이미지2"></a></li>
+							<li><a href="#"><img src="img/coffeenie_insta_3.jpg" alt="인스타이미지3"></a></li>
+							<li><a href="#"><img src="img/coffeenie_insta_4.jpg" alt="인스타이미지4"></a></li>
+							<li><a href="#"><img src="img/coffeenie_insta_5.jpg" alt="인스타이미지5"></a></li>
+							<li><a href="#"><img src="img/coffeenie_insta_6.jpg" alt="인스타이미지6"></a></li>
+							<li><a href="#"><img src="img/coffeenie_insta_7.jpg" alt="인스타이미지7"></a></li>
+							<li><a href="#"><img src="img/coffeenie_insta_8.jpg" alt="인스타이미지8"></a></li>
+							<li><a href="#"><img src="img/coffeenie_insta_9.jpg" alt="인스타이미지9"></a></li>
+							<li class="none"><a href="#"><img src="img/coffeenie_insta_10.jpg" alt="인스타이미지10"></a></li>
+						</ul>
+						<a href="#" class="ins_btn">커피니 인스타그램 @coffeenie_cafe</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 	<footer id="footer">
 		<div class="container">
-			<h2 class="ir_su">푸터</h2>
-			<div class="foot_link">
-				<ul>
-					<li><a href="#">회사소개</a></li>
-					<li><a href="#">인재채용</a></li>
-					<li><a href="#">개인정보취급방침</a></li>
-					<li><a href="#">이용약관</a></li>
-					<li><a href="#">이메일무단수집거부</a></li>
-					<li><a href="#">제휴문의</a></li>
-					<li><a href="#">고객의소리</a></li>
-				</ul>
-			</div>
-			<div class="foot_copy_info">
-				<p>서울시 강남구 연주로 866(신사동 636-2) 커피:니 본사</p>
-				<p>TEL 02.546.1325 &nbsp;&nbsp; FAX 02.546.1335</p>
-				<p></p>
-			</div>
-			<div class="foot_copy">COPYRIGHTⓒ 2012 COFFEENIE ALL RIGHTS RESERVED.</div>
-			<div class="sns_icon">
-				<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-				<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-				<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+			<div class="row">
+				<h2 class="ir_su">푸터</h2>
+				<div class="foot_link">
+					<ul>
+						<li><a href="#">회사소개</a></li>
+						<li><a href="#">인재채용</a></li>
+						<li><a href="#">개인정보취급방침</a></li>
+						<li><a href="#">이용약관</a></li>
+						<li><a href="#">이메일무단수집거부</a></li>
+						<li><a href="#">제휴문의</a></li>
+						<li><a href="#">고객의소리</a></li>
+					</ul>
+				</div>
+				<div class="foot_copy_info">
+					<p>서울시 강남구 연주로 866(신사동 636-2) 커피:니 본사</p>
+					<p>TEL 02.546.1325 &nbsp;&nbsp; FAX 02.546.1335</p>
+					<p></p>
+				</div>
+				<div class="foot_copy">COPYRIGHTⓒ 2012 COFFEENIE ALL RIGHTS RESERVED.</div>
+				<div class="sns_icon">
+					<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+				</div>
 			</div>
 		</div>
 	</footer>
