--- a/coffeenie/index.html
+++ b/coffeenie/index.html
@@ -12,10 +12,11 @@
 	<link rel="stylesheet" href="./css/index.css">
 	<link rel="stylesheet" href="./css/font-awesome.css">
 	<link rel="stylesheet" href="./css/slick.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<!-- //style -->
 
 	<!-- 웹폰트 -->
-	<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css" />
 	<!-- //웹폰트 -->
 </head>
 
