--- a/coffeenie/index.html
+++ b/coffeenie/index.html
@@ -329,6 +329,7 @@
 		</div>
 	</footer>
 	<div id="top_btn">
+		<a href="#"><span class="q_btn">가맹문의</span></a>
 		<a href="#"><span class="top_btn">top</span></a>
 	</div>
 </body>
