--- a/coffeenie/index.html
+++ b/coffeenie/index.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+	<!-- 헤더 -->
 	<header id="header">
 		<div class="container">
 			<div class="row">
@@ -33,6 +34,7 @@
 							<li><a href="#">매장찾기</a></li>
 						</ul>
 					</div>
+					<!-- // 헤더 소메뉴 -->
 					<div class="header_logo">
 						<h1>
 							<a href="#" class="pc_logo">
@@ -43,6 +45,7 @@
 							</a>
 						</h1>
 					</div>
+					<!-- // 헤더 로고 -->
 					<div class="nav_btn">
 						<h2>
 							<a href="#">
@@ -50,10 +53,12 @@
 							</a>
 						</h2>
 					</div>
+					<!-- // 모바일 메뉴 열기 아이콘 -->
 				</div>
 			</div>
 		</div>
 	</header>
+	<!-- 메뉴 시작 -->
 	<nav id="nav">
 		<h2 class="ir_su">전체 메뉴</h2>
 		<div class="nav">
@@ -104,7 +109,8 @@
 				</li>
 			</ul>
 			<div class="menuback"></div>
-		</div>
+		</div> <!-- // PC 메뉴 끝 -->
+		<!-- 모바일 메뉴 시작 -->
 		<div class="m_nav">
 			<div class="nav_close">
 				<a href="#">
@@ -165,32 +171,11 @@
 			</div>
 		</div>
 		<div class="m_back"></div>
+		<!-- // 모바일 메뉴 끝 -->
 	</nav>
+	<!-- 배너 시작 -->
 	<section id="banner">
 		<h2 class="ir_pm">배너</h2>
-		<!--
-				<div class="slides">
-					<div class="active">
-						<a href="#"><img src="img/coffeenie_milkyoolong.jpg" alt="밀키우롱 슬라이드배너"></a>
-					</div>
-					<div>
-						<a href="#"><img src="img/coffeenie_coldbrew.jpg" alt="콜드브루 슬라이드배너"></a>
-					</div>
-					<div>
-						<a href="#"><img src="img/coffeenie_strawberry.jpg" alt="딸기 슬라이드배너"></a>
-					</div>
-				</div>
-				<div class="side-bars">
-					<div>
-						<span>
-							<i class="fa fa-angle-left" aria-hidden="true"></i>
-						</span>
-					</div>
-					<div>
-						<span><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-					</div>
-				</div>
--->
 		<div class="slides">
 			<div class="s1">
 			</div>
@@ -199,10 +184,12 @@
 			<div class="s3">
 			</div>
 		</div>
-	</section>
+	</section> <!-- // 배너 끝 -->
+	<!-- main 부분 시작 -->
 	<section id="main">
 		<h2 class="ir_pm">메인</h2>
 		<div class="container">
+			<!-- NEW MENU 슬라이드 시작 -->
 			<div class="main">
 				<div class="main_slide">
 					<h3 class="main_tit">NEW MENU</h3>
@@ -224,6 +211,8 @@
 									alt="딸기초코라떼"><span>딸기초코라떼</span></a></div>
 					</div>
 				</div>
+				<!-- // NEW MENU 슬라이드 끝 -->
+				<!-- 가맹 문의 시작 -->
 				<div class="coffeenie_info">
 					<div class="info_text">
 						<h2>편안함 속 특별한 경험이 시작되는 곳</h2>
@@ -243,7 +232,9 @@
 						</div>
 					</div>
 				</div>
+				<!-- // 가맹 문의 끝 -->
 			</div>
+			<!-- MD 슬라이드 시작 -->
 			<div class="md">
 				<h3 class="main_tit md_tit">MD Check!</h3>
 				<div class="md_slide">
@@ -273,8 +264,10 @@
 					</button>
 				</div>
 			</div>
+			<!-- // MD 슬라이드 끝 -->
 		</div>
 	</section>
+	<!-- 인스타 시작 -->
 	<section id="insta">
 		<div class="insta">
 			<div class="container">
