--- a/espoir/index.html
+++ b/espoir/index.html
@@ -292,6 +292,7 @@
 	</header>
 
 	<section id="banner">
+		<h2 class="ir_so">에스쁘아 메인 배너</h2>
 		<div class="container">
 			<div class="slider">
 				<div class="bs1"></div>
@@ -519,40 +520,6 @@
 			<div class="look_book_bottom_btn">
 				<a href="#" class="viewmore">VIEW MORE</a>
 			</div>
-			<!-- <ul class="look_book_box clearfix">
-				<li class="box1">
-					<div class="img_box">
-						<img src="img/IMG1578MYo294232008.jpg" alt="NUDE MOOD LOOK">
-					</div>
-					<div class="txt_box">NUDE MOOD LOOK</div>
-				</li>
-				<li class="box2">
-					<div class="img_box">
-						<img src="img/IMG1578CrI293768553.jpg" alt="">
-					</div>
-					<div class="pop_box_1">
-						<button class="b1">on/off</button>
-						<div class="pop pop1" style="background-image: url(img/real_review_3.png);">
-							<span>피치 라이크</span>
-							<a href="#">more</a>
-						</div>
-					</div>
-					<div class="pop_box_2">
-						<button class="b2">on/off</button>
-						<div class="pop pop2" style="background-image: url(img/liner.png);">
-							<span>인텐스 블랙</span>
-							<a href="#">more</a>
-						</div>
-					</div>
-					<div class="txt_box">PEACHY LIKE LOOK</div>
-				</li>
-				<li class="box3">
-					<div class="img_box">
-						<img src="img/IMG1578iox296725083.png" alt="">
-					</div>
-					<div class="txt_box">ROSY FEED LOOK</div>
-				</li>
-			</ul> -->
 			<div class="lookbook_m">
 				<div class="look">
 					<div class="look_img">
@@ -667,6 +634,7 @@
 	</section>
 
 	<article id="notice">
+		<h2 class="ir_so">공지사항 슬라이드</h2>
 		<dl>
 			<dt>공지사항</dt>
 			<dd class="notice_slides">
