text animation edit

--- a/andbag/index.html
+++ b/andbag/index.html
@@ -478,9 +478,11 @@
     <section id="banner2">
         <div class="container">
             <div class="banner2">
-                <h2>데일리 크로스백의 완성</h2>
-                <span>미니 크로스백, 최대 추가 30% 할인</span>
-                <button>더 보러가기&emsp;></button>
+                <div class="t_box">
+                    <h2>데일리 크로스백의 완성</h2>
+                    <span>미니 크로스백, 최대 추가 30% 할인</span>
+                    <button>더 보러가기&emsp;></button>
+                </div>
             </div>
         </div>
     </section>
