--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
 	<title>김수연 웹 포폴</title>
+
+    <!-- style -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="con">
         <h1>김수연 웹 포폴</h1>
         <ul>
-<!--
-            <li><a href="/web_standard">웹 표준 (WEB STANDARD)</a></li>
-            <li><a href="/responsive_web">반응형 웹 (RESPONSIVE WEB)</a></li>
--->
             <li><a href="https://ksysky.github.io/portfolio/coffeenie/index.html">coffeenie (개인 포폴)</a></li>
             <li><a href="https://ksysky.github.io/portfolio/espoir/index.html">espoir (개인 포폴)</a></li>
             <li><a href="https://ksysky.github.io/portfolio/andbag/index.html">and bag (개인 포폴)</a></li>
