메인 페이지 시작

--- a/index.html
+++ b/index.html
@@ -3,21 +3,56 @@
 
 <head>
     <meta charset="UTF-8">
-	<title>김수연 웹 포폴</title>
+    <title>김수연 웹 포폴</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <!-- //style -->
 </head>
 
 <body>
-    <div class="con">
-        <h1>김수연 웹 포폴</h1>
-        <ul>
-            <li><a href="https://ksysky.github.io/portfolio/coffeenie/index.html">coffeenie (개인 포폴)</a></li>
-            <li><a href="https://ksysky.github.io/portfolio/espoir/index.html">espoir (개인 포폴)</a></li>
-            <li><a href="https://ksysky.github.io/portfolio/andbag/index.html">and bag (개인 포폴)</a></li>
-        </ul>
-    </div>
+    <!-- header -->
+    <header>
+        <div class="container">
+            <div class="row">
+                <h1>로고</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">메인</a></li>
+                        <li><a href="#">자기소개</a></li>
+                        <li><a href="#">스킬</a></li>
+                        <li><a href="#">포폴1</a></li>
+                        <li><a href="#">포폴2</a></li>
+                        <li><a href="#">포폴3</a></li>
+                        <li><a href="#">연락</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <!-- //header -->
+
+    <!-- main -->
+    <main>
+        <p>메인 페이지</p>
+    </main>
+    <section class="intro">
+        <p>자기소개</p>
+    </section>
+    <section class="skills">
+        <p>스킬</p>
+    </section>
+    <section class="section1">
+        <a href="https://ksysky.github.io/portfolio/coffeenie/index.html">coffeenie (개인 포폴)</a>
+    </section>
+    <section class="section2">
+        <a href="https://ksysky.github.io/portfolio/espoir/index.html">espoir (개인 포폴)</a>
+    </section>
+    <section class="section3">
+        <a href="https://ksysky.github.io/portfolio/andbag/index.html">and bag (개인 포폴)</a>
+    </section>
+    <!-- //main -->
 </body>
 
 </html>
