--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
     </footer>
     <!-- //footer -->
 </body>
+<!-- script -->
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/custom.js"></script>
+<!-- //script -->
 </html>
