--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
     <!-- main -->
     <div class="content">
         <section id="main" class="scroll">
-            <p>메인 페이지</p>
+            <div class="text_box">
+                <p class="emoji">&#x1F469;&#x200D;&#x1F4BB;</p>
+                <p>안녕하세요</p>
+                <p>신입 <em class="blue">웹퍼블리셔</em></p>
+                <p><em class="blue">김수연</em>의 <em class="blue">포트폴리오</em> 입니다.</p>
+            </div>
         </section>
         <section id="intro" class="scroll">
             <p>자기소개</p>
