--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
-                <label class="dark_mode">
-                    다크모드 ON
-                    <input type="checkbox">
-                    <span class="onoff_switch"></span>
-                </label>
+
+                <div class="mode_switch">
+                    <span class="mode_tit">Dark Mode</span>
+                    <label class="dark_mode">
+                        <input type="checkbox">
+                        <span class="onoff_switch"></span>
+                    </label>
+                </div>
             </div>
         </div>
     </aside>
@@ -45,11 +48,17 @@
     <!-- main -->
     <div class="content">
         <section id="main">
+            <span class="emoji">&#x1F469;&#x200D;&#x1F4BB;</span>
             <div class="text_box">
-                <p class="emoji">&#x1F469;&#x200D;&#x1F4BB;</p>
                 <p>안녕하세요</p>
                 <p>신입 <em class="blue">웹퍼블리셔</em></p>
                 <p><em class="blue">김수연</em>의 <em class="blue">포트폴리오</em> 입니다.</p>
+            </div>
+            <div class="typing">
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
             </div>
             <div class="scroll_box">
                 <a href="#">
