--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- main -->
     <div class="content">
         <section id="main">
-            <span class="emoji">&#x1F469;&#x200D;&#x1F4BB;</span>
+            <div class="emoji"></div>
             <div class="text_box">
                 <p>안녕하세요</p>
                 <p>신입 <em class="blue">웹퍼블리셔</em></p>
