--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"/>
+    <script src="https://kit.fontawesome.com/3a49bdd301.js" crossorigin="anonymous"></script>
     <!-- //style -->
 </head>
 
@@ -20,16 +20,17 @@
         <div class="row">
             <div class="aside_box">
                 <h1>
-                    <a href="#main">KIM<br>SU<br>YEON</a>
+                    <a href="#main" class="pc_logo">KIM<br>SU<br>YEON</a>
+                    <a href="#main" class="m_logo">KIM SU YEON</a>
                 </h1>
                 <nav>
                     <ul>
-                        <li class="active"><a href="#main">Home</a></li>
-                        <li><a href="#intro">About me</a></li>
-                        <li><a href="#skills">Skills</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
-                        <li><a href="#design">Design</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li class="active"><a href="#main" class="text">Home</a><a href="#main" class="icon"><i class="fas fa-home"></i></a></li>
+                        <li><a href="#intro" class="text">About me</a><a href="#main" class="icon"><i class="fas fa-user-circle"></i></a></li>
+                        <li><a href="#skills" class="text">Skills</a><a href="#main" class="icon"><i class="fas fa-cogs"></i></a></li>
+                        <li><a href="#portfolio" class="text">Portfolio</a><a href="#main" class="icon"><i class="fas fa-folder-open"></i></a></li>
+                        <li><a href="#design" class="text">Design</a><a href="#main" class="icon"><i class="fas fa-object-group"></i></a></li>
+                        <li><a href="#contact" class="text">Contact</a><a href="#main" class="icon"><i class="fas fa-address-book"></i></a></li>
                     </ul>
                 </nav>
 
