--- a/index.html
+++ b/index.html
@@ -23,26 +23,48 @@
                     <a href="#main" class="pc_logo">KIM<br>SU<br>YEON</a>
                     <a href="#main" class="m_logo">KIM SU YEON</a>
                 </h1>
-                <nav>
+                <nav class="pc_menu">
                     <ul>
-                        <li class="active"><a href="#main" class="text">Home</a><a href="#main" class="icon"><i class="fas fa-home"></i></a></li>
-                        <li><a href="#intro" class="text">About me</a><a href="#main" class="icon"><i class="fas fa-user-circle"></i></a></li>
-                        <li><a href="#skills" class="text">Skills</a><a href="#main" class="icon"><i class="fas fa-cogs"></i></a></li>
-                        <li><a href="#portfolio" class="text">Portfolio</a><a href="#main" class="icon"><i class="fas fa-folder-open"></i></a></li>
-                        <li><a href="#design" class="text">Design</a><a href="#main" class="icon"><i class="fas fa-object-group"></i></a></li>
-                        <li><a href="#contact" class="text">Contact</a><a href="#main" class="icon"><i class="fas fa-address-book"></i></a></li>
+                        <li class="active"><a href="#main" class="text">Home</a></li>
+                        <li><a href="#intro" class="text">About me</a></li>
+                        <li><a href="#skills" class="text">Skills</a></li>
+                        <li><a href="#portfolio" class="text">Portfolio</a></li>
+                        <li><a href="#design" class="text">Design</a></li>
+                        <li><a href="#contact" class="text">Contact</a></li>
                     </ul>
                 </nav>
-
-                <div class="mode_switch">
+                <div class="mode_switch pc_switch">
                     <span class="mode_tit">Dark Mode</span>
                     <label class="dark_mode">
                         <input type="checkbox">
                         <span class="onoff_switch"></span>
                     </label>
                 </div>
+                <div class="mBtn">
+                    <a href="#" class="ir_pm">모바일 버튼<span></span><span></span><span></span></a>
+                </div>
             </div>
         </div>
+        <div class="m_menu">
+            <nav>
+                <ul>
+                    <li class="active"><a href="#main" class="text">Home</a></li>
+                    <li><a href="#intro" class="text">About me</a></li>
+                    <li><a href="#skills" class="text">Skills</a></li>
+                    <li><a href="#portfolio" class="text">Portfolio</a></li>
+                    <li><a href="#design" class="text">Design</a></li>
+                    <li><a href="#contact" class="text">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="mode_switch">
+                <span class="mode_tit">Dark Mode</span>
+                <label class="dark_mode">
+                    <input type="checkbox">
+                    <span class="onoff_switch"></span>
+                </label>
+            </div>
+        </div>
+        <div class="m_back"></div>
     </aside>
     <!-- //aside -->
 
