타이핑 효과

--- a/index.html
+++ b/index.html
@@ -73,15 +73,10 @@
         <section id="main">
             <div class="emoji"></div>
             <div class="text_box">
-                <p>안녕하세요</p>
+                <span class="t_text"></span><span class="line">|</span>
+                <!-- <p>안녕하세요</p>
                 <p>신입 <em class="blue">웹퍼블리셔</em></p>
-                <p><em class="blue">김수연</em>의 <em class="blue">포트폴리오</em> 입니다.</p>
-            </div>
-            <div class="typing">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
+                <p><em class="blue">김수연</em>의 <em class="blue">포트폴리오</em> 입니다.</p> -->
             </div>
             <div class="scroll_box">
                 <a href="#">
