--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"/>
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
     <script src="https://kit.fontawesome.com/3a49bdd301.js" crossorigin="anonymous"></script>
     <!-- //style -->
 </head>
@@ -74,9 +75,6 @@
             <div class="emoji"></div>
             <div class="text_box">
                 <span class="t_text"></span><span class="line">|</span>
-                <!-- <p>안녕하세요</p>
-                <p>신입 <em class="blue">웹퍼블리셔</em></p>
-                <p><em class="blue">김수연</em>의 <em class="blue">포트폴리오</em> 입니다.</p> -->
             </div>
             <div class="scroll_box">
                 <a href="#">
@@ -84,8 +82,28 @@
                 </a>
             </div>
         </section>
-        <section id="intro">
-            <p>자기소개</p>
+        <section id="intro" class="mtb90">
+            <h2 class="title_bold">About me</h2>
+            <div class="intro_box">
+                <div class="me">
+                    <div class="me_img ir_pm">
+                        프로필 사진
+                    </div>
+                    <div class="back1"></div>
+                    <div class="back2"></div>
+                    <p class="hashtag">#신입#꼼꼼함#계속공부중#일본어가능</p>
+                </div>
+                <div class="intro_text">
+                    <p><b>이름</b><span>김수연</span></p>
+                    <p><b>거주지</b><span>대전광역시</span></p>
+                    <p><b>학력</b><span>금강대학교 일본어통번역학과 졸업</span></p>
+                    <p class="column"><b>자격증</b><span>웹디자인기능사</span><span>ACA Visual Design using Adobe Photoshop CC 2015</span><span>ACA Graphic Design and Illustration using
+                        Adobe Illustrator CC 2015</span></p>
+                    <p><b>이메일</b><span>36ksy@naver.com</span></p>
+                    <p class="resolution">div 태그가 여러 콘텐츠들을 한데 아우르는 것처럼 
+                        사람들과도 잘 아우르는 웹퍼블리셔가 되겠습니다.</p>
+                </div>
+            </div>
         </section>
         <section id="skills">
             <p>스킬</p>
