--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                     <p class="column"><b>자격증</b><span>웹디자인기능사</span><span>ACA Visual Design using Adobe Photoshop CC 2015</span><span>ACA Graphic Design and Illustration using
                         Adobe Illustrator CC 2015</span></p>
                     <p><b>이메일</b><span>36ksy@naver.com</span></p>
-                    <p class="resolution">div 태그가 여러 콘텐츠들을 한데 아우르는 것처럼 
-                        사람들과도 잘 아우르는 웹퍼블리셔가 되겠습니다.</p>
+                    <p class="resolution">"div 태그가 여러 콘텐츠들을 한데 아우르는 것처럼<br>
+                        사람들과도 잘 아우르는 웹퍼블리셔가 되겠습니다."</p>
                 </div>
             </div>
         </section>
